//
// Created by 13033 on 2025/6/16.
//

#ifndef CLI_LIFE_INDEX_H
#define CLI_LIFE_INDEX_H



class cli_life_index {

};



#endif //CLI_LIFE_INDEX_H
