@startuml
title weatherForecast CLI 架构关系图（融合结构）

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "common" {
  class CliContext
  class cli_animation_loader
  class cli_clear_console
  class delay
}

package "config" {
  class ConfigContext
  class ConfigUser
  class ConfigKey
  class ConfigLoader
  class BaseConfig
}

package "i18n" {
  class I18n
}

package "cli/menus_model" {
  class CliMenuController
  class CliDispatchController
}

package "cli/display" {
  class cli_weather_display
  class cli_life_index
  class cli_ai_advisor
  class cli_date_display
  class cli_user_settings
  class cli_update_city
}

' 上下文依赖
CliMenuController --> CliContext
CliDispatchController --> CliContext
CliContext --> ConfigContext
CliContext --> I18n

' 配置依赖
ConfigContext --> ConfigKey
ConfigContext --> ConfigUser
ConfigKey --> BaseConfig
ConfigUser --> BaseConfig

' 控制器与功能模块调用
CliMenuController --> cli_weather_display
CliMenuController --> cli_life_index
CliMenuController --> cli_ai_advisor
CliMenuController --> cli_date_display
CliMenuController --> cli_user_settings
CliMenuController --> cli_update_city

CliDispatchController --> cli_weather_display
CliDispatchController --> cli_life_index
CliDispatchController --> cli_date_display
CliDispatchController --> cli_user_settings
CliDispatchController --> cli_update_city

' 以下为自动提取类的成员与方法：
skinparam classAttributeIconSize 0
class CliApplication {
  ConfigContext ctx
  I18n i18n
  void run(int argc, char* argv[])
}
class LoaderStyle {
}
class CliMode {
}
class I18n {
  bool load(const std::string& language)
}
class BaseConfig {
  string configPath
  json configJson
  explicit BaseConfig(const std::string& path)
  bool load()
  bool save()
}
class ConfigContext {
  ConfigUser configUser
  ConfigKey configKey
}
class ConfigKey extends BaseConfig {
  json configData
  explicit ConfigKey(const std::string& path = "configKey.json")
  void setApiKey(const std::string& key)
  void setHost(const std::string& host)
}
class ConfigLoader {
  string configPath
  json configJson
  explicit ConfigLoader(const std::string& config_path = "configUser.json")
  bool load()
  void setDefaultCity(const std::string& city)
  void setUseIPLocation(bool useIP)
  void setUnits(const std::string& units)
  void setLanguage(const std::string& lang)
  void setCityId(const std::string& id)
  void setCacheExpiry(const std::string& key, int minutes)
}
class ConfigUser extends BaseConfig {
  explicit ConfigUser(const std::string& path = "configUser.json")
  void setDefaultCity(const std::string& city)
  void setUseIPLocation(bool useIP)
  void setUnits(const std::string& units)
  void setLanguage(const std::string& lang)
  void setCacheExpiry(const std::string& key, int minutes)
  void setDateFormateMenu(const std::string& dateFormate)
  void setCityId(const std::string& id)
}
class CacheManager {
  string data
  time_point timestamp
  explicit CacheManager(const json& config)
  string getCache(const std::string& key)
  void setCache(const std::string& key, const std::string& value, int expiryMinutes = 0)
  void clearAllCache()
  void clearCache(const std::string& key)
  void clearCacheFile(const std::string& filename)
}
class doubao_manager {
}
class WeatherManager {
  string apiKey
  string host
  string lang
  explicit WeatherManager(std::string key, std::string host, std::string lang = "zh")
  LifeIndexWithMeta getLifeIndices(const std::string& locationId, int expiryMinutes)
  ForecastResult get7DayForecast(const std::string& locationId, const std::string& language, int cacheExpiryMinutes)
  WeatherNow getCachedCurrentWeather(const std::string& locationId)
}
class mainwindow extends QWidget {
  explicit mainwindow(QWidget *parent = nullptr)
}
@enduml